@@ -5007,6 +5007,52 @@ button.mfp-arrow {
 	z-index: 2;
 }
 
+/* Section Blend */
+/* @noflip */
+.tb-blend {
+	clear: both;
+	display: block;
+	margin-left: -26px;
+	position: absolute;
+	left: 50%;
+	width: 50px;
+	height: 25px;
+	z-index: 25;
+}
+.tb-blend.up {
+	top: 0;
+	margin-top: -25px;
+	margin-bottom: -1px;
+}
+.tb-blend.down {
+	bottom: 0;
+	margin-bottom: -25px;
+	margin-top: -1px;
+}
+.tb-blend .blend-outer {
+	display: block;
+	overflow: hidden;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+}
+/* @noflip */
+.tb-blend .blend-inner {
+	display: block;
+	position: absolute;
+	left: 50%;
+	width: 50px;
+	height: 50px;
+	-webkit-transform: translateX(-50%) rotate(45deg);
+	transform: translateX(-50%) rotate(45deg);
+}
+.tb-blend.up .blend-inner {
+	bottom: -39px;
+}
+.tb-blend.down .blend-inner {
+	top: -39px;
+}
+
 /* Columns */
 .element-columns .col.has-bg {
 	padding: 30px;
